--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,12 @@
   "plugins": [
     [
       "@babel/plugin-proposal-class-properties"
+    ],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
     ]
   ]
 }
